--- a/src/App.css
+++ b/src/App.css
@@ -48,18 +48,20 @@ body {
 }
 @media only screen and (max-width: 1000px) {
   .centerContent {
-    margin-left: 5%;
-    margin-right: 5%;
-  }
-  .card {
-    height: 40vh;
+    margin: 0;
   }
   .card-body {
     /* flex-direction: column; */
     height: 20vh;
     width: 100%;
   }
+  .card-title {
+    font-size: 12px;
+  }
   .card-img-top {
-    width: 100%;
+    width: 50%;
+    border-radius: 12px;
+    /* max-height: 100px; */
+    object-fit: contain;
   }
 }
