--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -15,11 +15,21 @@
   justify-content: space-between;
   flex-direction: row;
 }
+
+.nav-link {
+  border-radius: 4px;
+  background: fff;
+  color: white;
+}
 @media only screen and (max-width: 1000px) {
   .navbar-nav {
-    width: 100%;
     display: flex;
-    flex-direction: column-reverse;
-    flex: 3;
+  }
+  .navbar {
+    width: 100%;
+    overflow-x: auto;
+  }
+  .nav-item {
+    margin-right: 12px;
   }
 }
